# BookflavorInterface

./: .clang-format  .gitignore  CMakeLists.txt
Book/: book.hxx
Proto/BookServer/: Service.proto
Proto/FileServer/: File.proto  FileOperation.proto  FileShard.proto  Service.proto
user/: user.hxx
video/: video.hxx
